--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
            
         </ul>
         <ul id="mobile-demo" class="sidenav" style="transform: translateX(-100%);">
-            <li class="top-level-nav"><a href="about.html">Andrew Tugume</a></li>
+            <li class="top-level-nav"><a href="https://www.andrewtugume.com/">Andrew Tugume</a></li>
             <li class="divider"></li>
             <li class="top-level-nav"><a href="#" class="btn btn-compact btn-hollow">Recruit/Hire</a></li>
               <li class="top-level-nav"><a href="#" class="btn btn-compact btn-hollow">Consult/Contact</a></li> 
