--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
        <p>.</p>
          <blockquote class="flow-text">Remote Software Engineering Teams</blockquote>
          <ul>
-        <li  class="title black-text text-lighten-3">We Build A Teams</li>
+        <li  class="title black-text text-lighten-3">We Build World Class Teams</li>
         <div class="spacer"></div>
             <li  class="title black-text text-lighten-3">We Build First Class Products</li>
         <div class="spacer"></div>
@@ -100,7 +100,7 @@
 
          <div class="card-content black-text">
            <span class="card-title">Recruit/Hire</span>
-            <p>UI/UX Design</p>
+            <p>UI/UX Designers</p>
             <p>Systems Software Engineers</p>
             <p>Applications Software Engineers</p>
             <p>Data Scientists</p>
