--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1.0"
     />
-    <title>Pearl Valley Digital Agency</title>
+    <title>Pearl Valley E-Commerce Agency</title>
 
     <!-- CSS -->
     <link
@@ -58,10 +58,10 @@
         <a  href=""><img class="brand-logo" src="logo.png"></a>
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
-          <li><a href="#home">Product Design</a></li>
-          <li><a href="#service">Brand Development</a></li>
-          <li><a href="#blog">E-Commerce</a></li>
-          <li><a href="#contact">Blogs</a></li>
+          <li><a href="https://www.goods.pearl-valley.com/">Goods</a></li>
+          <li><a href="#service">Foods</a></li>
+          <li><a href="#blog">Services</a></li>
+          <li><a href="#contact">Events</a></li>
           <li>
             <a href="#contact" class="white black-text waves-effect waves-light btn"
               >Inquire Now</a
@@ -72,7 +72,7 @@
         <ul id="nav-mobile" class="sidenav">
           <li><a href="#home">Product Design</a></li>
           <li><a href="#service">Brand Development</a></li>
-          <li><a href="#blog">E-Commerce</a></li>
+          <li><a href="#blog">Shop</a></li>
           <li><a href="#contact">Blogs</a></li>
         </ul>
        
@@ -87,13 +87,12 @@
         <li>
           <img src="img/slider2.jpg" />
           <!-- random image -->
-          <div class="caption center-align">
-            <h1>Pearl Valley </h1>
+          <div class="caption left-align">
+            <h1>Pearl Valley</h1>
             <h5>
-              Product Design, Brand Development, E-Commerce.
+              Ugandan Digital Products.
             </h5>
-            <a class=" btn btn-large"
-              >LEARN MORE</a
+            <a class=" btn btn-large">GET UGANDAN DIGITAL PRODUCTS</a
             >
           </div>
         </li>
@@ -101,12 +100,11 @@
           <img src="img/slider1.jpg" />
           <!-- random image -->
           <div class="caption left-align">
-            <h3>Digital Agency</h3>
+            <h3>You Can Also Upload Your Own Digital Product</h3>
             <h5>
-              Produce Brand Sell
+              Music Games Movies Apps ...
             </h5>
-            <a class=" btn btn-large"
-              >LEARN MORE</a
+            <a class=" btn btn-large">GO TO OUR SHOP</a
             >
           </div>
         </li>
