--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
         </ul>
 
         <ul id="nav-mobile" class="sidenav">
-          <li><a href="#home">Product Design</a></li>
-          <li><a href="#service">Brand Development</a></li>
-          <li><a href="#blog">Shop</a></li>
-          <li><a href="#contact">Blogs</a></li>
+          <li><a href="https://www.goods.pearl-valley.com/">Goods</a></li>
+          <li><a href="#service">Foods</a></li>
+          <li><a href="#blog">Services</a></li>
+          <li><a href="#contact">Events</a></li>
         </ul>
        
       </div>
