--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1.0"
     />
-    <title>Pearl Valley E-Commerce Agency</title>
+    <title>Pearl Valley E-Commerce</title>
 
     <!-- CSS -->
     <link
@@ -58,22 +58,15 @@
         <a  href=""><img class="brand-logo" src="logo.png"></a>
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
-          <li><a href="https://www.goods.pearl-valley.com/">Goods</a></li>
-          <li><a href="#service">Foods</a></li>
-          <li><a href="#blog">Services</a></li>
-          <li><a href="#contact">Events</a></li>
-          <li>
-            <a href="#contact" class="white black-text waves-effect waves-light btn"
-              >Inquire Now</a
-            >
-          </li>
+          <li><a href="https://www.goods.pearl-valley.com/">Goods And Foods</a></li>
+          <li><a href="#service">Services And Events</a></li>
+          <li><a href="#blog">Digital Products</a></li>
         </ul>
 
         <ul id="nav-mobile" class="sidenav">
-          <li><a href="https://www.goods.pearl-valley.com/">Goods</a></li>
-          <li><a href="#service">Foods</a></li>
-          <li><a href="#blog">Services</a></li>
-          <li><a href="#contact">Events</a></li>
+          <li><a href="https://www.goods.pearl-valley.com/">Goods And Foods</a></li>
+          <li><a href="#service">Services And Events</a></li>
+          <li><a href="#blog">Digital Products</a></li>
         </ul>
        
       </div>
@@ -89,24 +82,13 @@
           <!-- random image -->
           <div class="caption left-align">
             <h1>Pearl Valley</h1>
-            <h5>
-              Ugandan Digital Products.
-            </h5>
-            <a class=" btn btn-large">GET UGANDAN DIGITAL PRODUCTS</a
-            >
           </div>
         </li>
         <li>
           <img src="img/slider1.jpg" />
           <!-- random image -->
           <div class="caption left-align">
-            <h3>You Can Also Upload Your Own Digital Product</h3>
-            <h5>
-              Music Games Movies Apps ...
-            </h5>
-            <a class=" btn btn-large">GO TO OUR SHOP</a
-            >
-          </div>
+            <h3>Goods And Foods, Services And Events, Digital Products</h3>
         </li>
       </ul>
     </section>
@@ -122,7 +104,7 @@
               <h2 class="center black-text">
                 <i class="material-icons">flash_on</i>
               </h2>
-              <h5 class="center">Digital Product Design</h5>
+              <h5 class="center">Goods And Foods</h5>
 
               <p class="light">
                 We did most of the heavy lifting for you to provide a default
@@ -138,7 +120,7 @@
               <h2 class="center black-text">
                 <i class="material-icons">group</i>
               </h2>
-              <h5 class="center">Digital Brand Development</h5>
+              <h5 class="center">Events And Services</h5>
 
               <p class="light">
                 By utilizing elements and principles of Material Design, we were
@@ -155,7 +137,7 @@
               <h2 class="center black-text">
                 <i class="material-icons">settings</i>
               </h2>
-              <h5 class="center">E-Commerce</h5>
+              <h5 class="center">Digital Products</h5>
 
               <p class="light">
                 We have provided detailed documentation as well as specific code
