--- a/index.html
+++ b/index.html
@@ -92,7 +92,12 @@
         </li>
       </ul>
     </section>
-
+    <!-----eccwid shop start-->
+    <div id="my-store-39767131"></div>
+    <div>
+    <script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?39767131&data_platform=code&data_date=2020-10-30" charset="utf-8"></script><script type="text/javascript"> xProductBrowser("categoriesPerRow=3","views=grid(20,3) list(60) table(60)","categoryView=grid","searchView=list","id=my-store-39767131");</script>
+    </div>
+     <!-----eccwid shop end-->
     <!-- Section: Service -->
 
     <div id="service" class="container scrollspy">
